feature/FCS-935/email-notifications-to-operator/accept-reject-application-withdrawal (#631)
email notifications to operators when receiving a response for an application withdrawal request